fixed alignment

--- a/style.css
+++ b/style.css
@@ -78,6 +78,3 @@ p{
     font-size: 1.2rem;
     text-align: center;
 }
-#dalliance{
-    align-self: start;
-}
